...
    private func loadNextPage() {
        guard !isLoadingNextPage && presenter.hasNextPage else { return }
        
        let activityIndicator = UIActivityIndicatorView(style: .medium)
        activityIndicator.startAnimating()
        activityIndicator.frame = CGRect(x: 0, y: 0, width: tableView.bounds.width, height: 60)
        activityIndicator.accessibilityIdentifier = "nextPage"
        tableView.tableFooterView = activityIndicator
        
        isLoadingNextPage = true
        presenter.loadNextPage()
    }
    
...
